parser/CParser.py
# Generated from CParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CParser ( Parser ):

    grammarFileName = "CParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'++'", "'--'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'='", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'&&'", "'||'", "'!'", "'~'", 
                     "'&'", "'^'", "'|'", "'<<'", "'>>'", "';'", "','", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'int'", "'float'", "'char'", 
                     "'void'", "'return'", "'if'", "'else'", "'while'", 
                     "'for'", "'sizeof'" ]

    symbolicNames = [ "<INVALID>", "PREPROCESSOR_DIRECTIVE", "SELF_INC", 
                      "SELF_DEC", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", 
                      "MODULO", "ASSIGN", "EQUAL", "NOT_EQUAL", "LESS", 
                      "LESS_EQUAL", "GREATER", "GREATER_EQUAL", "AND", "OR", 
                      "NOT", "REVERSE", "OP_AND", "OP_XOR", "OP_OR", "SHL", 
                      "SHR", "SEMI", "COMMA", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "LBRACK", "RBRACK", "WS", "BLOCK_COMMENT", 
                      "LINE_COMMENT", "INT_TYPE", "FLOAT_TYPE", "CHAR_TYPE", 
                      "VOID_TYPE", "RET", "IF", "ELSE", "WHILE", "FOR", 
                      "SIZEOF", "ID", "INT", "FLOAT", "CHAR", "ESCAPE_CHAR", 
                      "STRING" ]

    RULE_program = 0
    RULE_function = 1
    RULE_var_type = 2
    RULE_formal_args = 3
    RULE_actual_args = 4
    RULE_statement = 5
    RULE_return_statm = 6
    RULE_declare_var_statm = 7
    RULE_assign_statm = 8
    RULE_call_func_statm = 9
    RULE_condition_statm = 10
    RULE_while_statm = 11
    RULE_for_statm = 12
    RULE_arith_statm = 13
    RULE_const_val = 14
    RULE_eval_expr = 15

    ruleNames =  [ "program", "function", "var_type", "formal_args", "actual_args", 
                   "statement", "return_statm", "declare_var_statm", "assign_statm", 
                   "call_func_statm", "condition_statm", "while_statm", 
                   "for_statm", "arith_statm", "const_val", "eval_expr" ]

    EOF = Token.EOF
    PREPROCESSOR_DIRECTIVE=1
    SELF_INC=2
    SELF_DEC=3
    PLUS=4
    MINUS=5
    MULTIPLY=6
    DIVIDE=7
    MODULO=8
    ASSIGN=9
    EQUAL=10
    NOT_EQUAL=11
    LESS=12
    LESS_EQUAL=13
    GREATER=14
    GREATER_EQUAL=15
    AND=16
    OR=17
    NOT=18
    REVERSE=19
    OP_AND=20
    OP_XOR=21
    OP_OR=22
    SHL=23
    SHR=24
    SEMI=25
    COMMA=26
    LPAREN=27
    RPAREN=28
    LBRACE=29
    RBRACE=30
    LBRACK=31
    RBRACK=32
    WS=33
    BLOCK_COMMENT=34
    LINE_COMMENT=35
    INT_TYPE=36
    FLOAT_TYPE=37
    CHAR_TYPE=38
    VOID_TYPE=39
    RET=40
    IF=41
    ELSE=42
    WHILE=43
    FOR=44
    SIZEOF=45
    ID=46
    INT=47
    FLOAT=48
    CHAR=49
    ESCAPE_CHAR=50
    STRING=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.FunctionContext)
            else:
                return self.getTypedRuleContext(CParser.FunctionContext,i)


        def getRuleIndex(self):
            return CParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.function()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1030792151040) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(CParser.Var_typeContext,0)


        def ID(self):
            return self.getToken(CParser.ID, 0)

        def LPAREN(self):
            return self.getToken(CParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(CParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CParser.RBRACE, 0)

        def formal_args(self):
            return self.getTypedRuleContext(CParser.Formal_argsContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.StatementContext)
            else:
                return self.getTypedRuleContext(CParser.StatementContext,i)


        def getRuleIndex(self):
            return CParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = CParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.var_type()
            self.state = 38
            self.match(CParser.ID)
            self.state = 39
            self.match(CParser.LPAREN)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1030792151040) != 0):
                self.state = 40
                self.formal_args()


            self.state = 43
            self.match(CParser.RPAREN)
            self.state = 44
            self.match(CParser.LBRACE)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4499132996911180) != 0):
                self.state = 45
                self.statement()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 51
            self.match(CParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(CParser.INT_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(CParser.FLOAT_TYPE, 0)

        def CHAR_TYPE(self):
            return self.getToken(CParser.CHAR_TYPE, 0)

        def VOID_TYPE(self):
            return self.getToken(CParser.VOID_TYPE, 0)

        def getRuleIndex(self):
            return CParser.RULE_var_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_type" ):
                listener.enterVar_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_type" ):
                listener.exitVar_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_type" ):
                return visitor.visitVar_type(self)
            else:
                return visitor.visitChildren(self)




    def var_type(self):

        localctx = CParser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1030792151040) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Formal_argsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.Var_typeContext)
            else:
                return self.getTypedRuleContext(CParser.Var_typeContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.ID)
            else:
                return self.getToken(CParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.COMMA)
            else:
                return self.getToken(CParser.COMMA, i)

        def MULTIPLY(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.MULTIPLY)
            else:
                return self.getToken(CParser.MULTIPLY, i)

        def LBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.LBRACK)
            else:
                return self.getToken(CParser.LBRACK, i)

        def RBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.RBRACK)
            else:
                return self.getToken(CParser.RBRACK, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.INT)
            else:
                return self.getToken(CParser.INT, i)

        def getRuleIndex(self):
            return CParser.RULE_formal_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal_args" ):
                listener.enterFormal_args(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal_args" ):
                listener.exitFormal_args(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal_args" ):
                return visitor.visitFormal_args(self)
            else:
                return visitor.visitChildren(self)




    def formal_args(self):

        localctx = CParser.Formal_argsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formal_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.var_type()
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 56
                self.match(CParser.MULTIPLY)


            self.state = 59
            self.match(CParser.ID)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 60
                self.match(CParser.LBRACK)
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==47:
                    self.state = 61
                    self.match(CParser.INT)


                self.state = 64
                self.match(CParser.RBRACK)


            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26:
                self.state = 67
                self.match(CParser.COMMA)
                self.state = 68
                self.var_type()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 69
                    self.match(CParser.MULTIPLY)


                self.state = 72
                self.match(CParser.ID)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==31:
                    self.state = 73
                    self.match(CParser.LBRACK)
                    self.state = 75
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==47:
                        self.state = 74
                        self.match(CParser.INT)


                    self.state = 77
                    self.match(CParser.RBRACK)


                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Actual_argsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eval_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.Eval_exprContext)
            else:
                return self.getTypedRuleContext(CParser.Eval_exprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.COMMA)
            else:
                return self.getToken(CParser.COMMA, i)

        def getRuleIndex(self):
            return CParser.RULE_actual_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActual_args" ):
                listener.enterActual_args(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActual_args" ):
                listener.exitActual_args(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActual_args" ):
                return visitor.visitActual_args(self)
            else:
                return visitor.visitChildren(self)




    def actual_args(self):

        localctx = CParser.Actual_argsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_actual_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.eval_expr(0)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26:
                self.state = 86
                self.match(CParser.COMMA)
                self.state = 87
                self.eval_expr(0)
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declare_var_statm(self):
            return self.getTypedRuleContext(CParser.Declare_var_statmContext,0)


        def SEMI(self):
            return self.getToken(CParser.SEMI, 0)

        def assign_statm(self):
            return self.getTypedRuleContext(CParser.Assign_statmContext,0)


        def return_statm(self):
            return self.getTypedRuleContext(CParser.Return_statmContext,0)


        def call_func_statm(self):
            return self.getTypedRuleContext(CParser.Call_func_statmContext,0)


        def condition_statm(self):
            return self.getTypedRuleContext(CParser.Condition_statmContext,0)


        def while_statm(self):
            return self.getTypedRuleContext(CParser.While_statmContext,0)


        def for_statm(self):
            return self.getTypedRuleContext(CParser.For_statmContext,0)


        def arith_statm(self):
            return self.getTypedRuleContext(CParser.Arith_statmContext,0)


        def getRuleIndex(self):
            return CParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = CParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.declare_var_statm()
                self.state = 94
                self.match(CParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.assign_statm()
                self.state = 97
                self.match(CParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.return_statm()
                self.state = 100
                self.match(CParser.SEMI)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 102
                self.call_func_statm()
                self.state = 103
                self.match(CParser.SEMI)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 105
                self.condition_statm()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 106
                self.while_statm()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 107
                self.for_statm()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 108
                self.arith_statm()
                self.state = 109
                self.match(CParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_statmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RET(self):
            return self.getToken(CParser.RET, 0)

        def eval_expr(self):
            return self.getTypedRuleContext(CParser.Eval_exprContext,0)


        def getRuleIndex(self):
            return CParser.RULE_return_statm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_statm" ):
                listener.enterReturn_statm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_statm" ):
                listener.exitReturn_statm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_statm" ):
                return visitor.visitReturn_statm(self)
            else:
                return visitor.visitChildren(self)




    def return_statm(self):

        localctx = CParser.Return_statmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_return_statm)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.match(CParser.RET)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(CParser.RET)

                self.state = 115
                self.eval_expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declare_var_statmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(CParser.Var_typeContext,0)


        def ID(self):
            return self.getToken(CParser.ID, 0)

        def MULTIPLY(self):
            return self.getToken(CParser.MULTIPLY, 0)

        def LBRACK(self):
            return self.getToken(CParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(CParser.RBRACK, 0)

        def eval_expr(self):
            return self.getTypedRuleContext(CParser.Eval_exprContext,0)


        def ASSIGN(self):
            return self.getToken(CParser.ASSIGN, 0)

        def getRuleIndex(self):
            return CParser.RULE_declare_var_statm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclare_var_statm" ):
                listener.enterDeclare_var_statm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclare_var_statm" ):
                listener.exitDeclare_var_statm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare_var_statm" ):
                return visitor.visitDeclare_var_statm(self)
            else:
                return visitor.visitChildren(self)




    def declare_var_statm(self):

        localctx = CParser.Declare_var_statmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declare_var_statm)
        self._la = 0 # Token type
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.var_type()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 119
                    self.match(CParser.MULTIPLY)


                self.state = 122
                self.match(CParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.var_type()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 125
                    self.match(CParser.MULTIPLY)


                self.state = 128
                self.match(CParser.ID)
                self.state = 129
                self.match(CParser.LBRACK)

                self.state = 130
                self.eval_expr(0)
                self.state = 131
                self.match(CParser.RBRACK)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.var_type()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==6:
                    self.state = 134
                    self.match(CParser.MULTIPLY)


                self.state = 137
                self.match(CParser.ID)
                self.state = 138
                self.match(CParser.ASSIGN)

                self.state = 139
                self.eval_expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_statmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eval_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.Eval_exprContext)
            else:
                return self.getTypedRuleContext(CParser.Eval_exprContext,i)


        def ASSIGN(self):
            return self.getToken(CParser.ASSIGN, 0)

        def getRuleIndex(self):
            return CParser.RULE_assign_statm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_statm" ):
                listener.enterAssign_statm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_statm" ):
                listener.exitAssign_statm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_statm" ):
                return visitor.visitAssign_statm(self)
            else:
                return visitor.visitChildren(self)




    def assign_statm(self):

        localctx = CParser.Assign_statmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assign_statm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.eval_expr(0)
            self.state = 144
            self.match(CParser.ASSIGN)

            self.state = 145
            self.eval_expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Call_func_statmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CParser.ID, 0)

        def LPAREN(self):
            return self.getToken(CParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CParser.RPAREN, 0)

        def actual_args(self):
            return self.getTypedRuleContext(CParser.Actual_argsContext,0)


        def getRuleIndex(self):
            return CParser.RULE_call_func_statm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall_func_statm" ):
                listener.enterCall_func_statm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall_func_statm" ):
                listener.exitCall_func_statm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall_func_statm" ):
                return visitor.visitCall_func_statm(self)
            else:
                return visitor.visitChildren(self)




    def call_func_statm(self):

        localctx = CParser.Call_func_statmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_call_func_statm)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(CParser.ID)
            self.state = 148
            self.match(CParser.LPAREN)

            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4468415390810188) != 0):
                self.state = 149
                self.actual_args()


            self.state = 152
            self.match(CParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_statmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.IF)
            else:
                return self.getToken(CParser.IF, i)

        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.LPAREN)
            else:
                return self.getToken(CParser.LPAREN, i)

        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.RPAREN)
            else:
                return self.getToken(CParser.RPAREN, i)

        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.LBRACE)
            else:
                return self.getToken(CParser.LBRACE, i)

        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.RBRACE)
            else:
                return self.getToken(CParser.RBRACE, i)

        def eval_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.Eval_exprContext)
            else:
                return self.getTypedRuleContext(CParser.Eval_exprContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.StatementContext)
            else:
                return self.getTypedRuleContext(CParser.StatementContext,i)


        def ELSE(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.ELSE)
            else:
                return self.getToken(CParser.ELSE, i)

        def getRuleIndex(self):
            return CParser.RULE_condition_statm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition_statm" ):
                listener.enterCondition_statm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition_statm" ):
                listener.exitCondition_statm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition_statm" ):
                return visitor.visitCondition_statm(self)
            else:
                return visitor.visitChildren(self)




    def condition_statm(self):

        localctx = CParser.Condition_statmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condition_statm)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(CParser.IF)
            self.state = 155
            self.match(CParser.LPAREN)

            self.state = 156
            self.eval_expr(0)
            self.state = 157
            self.match(CParser.RPAREN)
            self.state = 158
